--- a/study/crud-user-mvc.ru/www/.htaccess
+++ b/study/crud-user-mvc.ru/www/.htaccess
@@ -1,11 +1,15 @@
 AddDefaultCharset utf-8
 
+#Options -Indexes
+
 RewriteEngine on
 
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-	RewriteRule ^([a-zA-Z0-9_-]+)$ index.php?controller=$1&view=index
+    RewriteRule ^([a-zA-Z0-9_-]+)$ index.php?controller=$1&view=index
     RewriteRule ^([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)[/]?$ index.php?controller=$1&view=$2
+    RewriteRule ^([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/id([a-zA-Z0-9_-]+)[/]?$ index.php?controller=$1&view=$2&id=$3
+    RewriteRule ^([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/param([a-zA-Z0-9_-]+)[/]?$ index.php?controller=$1&view=$2&param=$3
 
 
 
@@ -13,3 +17,4 @@ RewriteEngine on
 #   ERRORS
 
 errorDocument 404 http://crud-user-mvc.ru/errors/404.php
+errorDocument 403 http://crud-user-mvc.ru/errors/403.php
